fix: minor cleanup